<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uac.johnfontalvoperez.formativataller.OperacionesActivity">

    <Button
        android:id="@+id/btn_potencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/potencia"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_above="@+id/btn_maxmin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_maxmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mayor_y_menor"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/btn_mcm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_mcm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mcm"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="198dp" />

    <TextView
        android:text="@string/operaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textStyle="normal|bold"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tw_Resultado"
        android:layout_marginTop="96dp"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/btn_maxmin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edt_Num1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numero_1"
        android:inputType="numberDecimal"
        android:layout_above="@+id/btn_potencia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp" />

    <EditText
        android:id="@+id/edt_num2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numero_2"
        android:inputType="numberDecimal"
        android:layout_above="@+id/btn_potencia"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

</RelativeLayout>
