<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uac.johnfontalvoperez.formativataller.MainActivity">

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:layout_marginTop="16dp"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/edt_pass"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fondo"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="true" />

    <EditText
        android:id="@+id/edt_Usuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usuario"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/edt_pass"
        android:layout_alignStart="@+id/edt_pass"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/edt_Usuario"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
